added new gradient to header

--- a/wildlife.html
+++ b/wildlife.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
-    <header id="top" class="main-header">
+    <header id="top" class="wildlife-header">
       <span class="title">Take a look at the beautiful Wildlife</span>
       <h1>Lake Tahoe's Wildlife</h1>
       <img class="arrow" src="img/arrow.svg" alt="Down arrow">
