added new color to footer

--- a/wildlife.html
+++ b/wildlife.html
@@ -51,7 +51,7 @@
       </div>
 		</div><!-- End .secondary-content -->
 
-		<footer class="main-footer">
+		<footer class="wildlife-footer">
 			<p>All rights reserved to the state of <a href="#">California</a>.</p>
 			<a href="#top">Back to top &raquo;</a>
 		</footer>
