removed header from wildlife page

--- a/wildlife.html
+++ b/wildlife.html
@@ -16,14 +16,9 @@
 			<p class="intro">
 				Lake Tahoe is one of the most breathtaking attractions located in California. It's home to a number of ski resorts, summer outdoor recreation, and tourist attractions. Snow and skiing are a significant part of the area's reputation.
 			</p>
-			<a class="callout" href="#more">Find out more</a>
+		
 
-      <div class="wildlife">
-        <h2>Wildlife</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget neque nisl. Vestibulum accumsan ipsum vitae ex fermentum viverra. Nam vel magna condimentum velit dictum hendrerit id at sem. Proin vel libero ante.
-        </p>
-      </div><!-- End .wildlife -->
+    <!-- End .wildlife -->
 
 			<a class="callout" href="index.html">Back to Lake Tahoe</a>
 		</div><!-- End .primary-content -->
