--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<p class="intro">
 				Lake Tahoe is one of the most breathtaking attractions located in California. It's home to a number of ski resorts, summer outdoor recreation, and tourist attractions. Snow and skiing are a significant part of the area's reputation.
 			</p>
-			<a class="callout" href="#more">Find out more</a>
+			<a class="callout" href="https://visitinglaketahoe.com/" target="_blank">Find out more</a>
 
       <div class="wildlife">
         <h2>Check out all the Wildlife</h2>
@@ -36,9 +36,9 @@
           Lake Tahoe is full of wonderful places to stay. You have the ability to sleep in the outdoors in a tent, or relax like a king at a five star resort. Here are our top three resorts:
         </p>
         <ul>
-          <li><a href="#hotels">Lake Tahoe Resort Hotel</a></li>
-          <li><a href="#resorts">South Lake Tahoe Resorts</a></li>
-          <li><a href="#lodging">Tahoe Ski Resort Lodging</a></li>
+          <li><a href="https://www.tripadvisor.com/Hotels-g1798615-South_Lake_Tahoe_Lake_Tahoe_California_California-Hotels.html" target="_blank">Lake Tahoe Resort Hotel</a></li>
+          <li><a href="https://www.tripadvisor.com/Hotels-g1798615-South_Lake_Tahoe_Lake_Tahoe_California_California-Hotels.html" target="_blank">South Lake Tahoe Resorts</a></li>
+          <li><a href="https://www.tripadvisor.com/Hotels-g1798615-South_Lake_Tahoe_Lake_Tahoe_California_California-Hotels.html" target="_blank">Tahoe Ski Resort Lodging</a></li>
         </ul>
       </div>
 
@@ -58,7 +58,7 @@
 		</div><!-- End .secondary-content -->
 
 		<footer class="main-footer">
-			<p>All rights reserved to the state of <a href="#">California</a>.</p>
+			<p>All rights reserved to the state of <a href="https://www.visitcalifornia.com" target ="_blank">California</a>.</p>
 			<a href="#top">Back to top &raquo;</a>
 		</footer>
   </body>
