--- a/wildlife.html
+++ b/wildlife.html
@@ -16,7 +16,7 @@
 			<p class="intro">
 				Lake Tahoe is one of the most breathtaking attractions located in California. It's home to a number of ski resorts, summer outdoor recreation, and tourist attractions. Snow and skiing are a significant part of the area's reputation.
 			</p>
-		
+
 
     <!-- End .wildlife -->
 
@@ -47,7 +47,7 @@
 		</div><!-- End .secondary-content -->
 
 		<footer class="wildlife-footer">
-			<p>All rights reserved to the state of <a href="#">California</a>.</p>
+			<p>All rights reserved to the state of <a href="https://www.visitcalifornia.com" target ="_blank">California</a>.</p>
 			<a href="#top">Back to top &raquo;</a>
 		</footer>
   </body>
