updated animal links to wildlife page

--- a/wildlife.html
+++ b/wildlife.html
@@ -24,21 +24,21 @@
 		</div><!-- End .primary-content -->
 
 		<div class="secondary-content t-border group">
-      <div class="wildlife-mink">
+      <div class="wildlife-mink" id="mink">
         <h2>Mink</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget neque nisl. Vestibulum accumsan ipsum vitae ex fermentum viverra. Nam vel magna condimentum velit dictum hendrerit id at sem. Proin vel libero ante.
         </p>
       </div>
 
-      <div class="wildlife-bears">
+      <div class="wildlife-bears" id="bears">
         <h2>Bears</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget neque nisl. Vestibulum accumsan ipsum vitae ex fermentum viverra. Nam vel magna condimentum velit dictum hendrerit id at sem. Proin vel libero ante.
         </p>
       </div>
 
-      <div class="wildlife-baldeagles">
+      <div class="wildlife-baldeagles" id="eagles">
         <h2>Bald Eagles</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget neque nisl. Vestibulum accumsan ipsum vitae ex fermentum viverra. Nam vel magna condimentum velit dictum hendrerit id at sem. Proin vel libero ante.
