--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="wildlife">
         <h2>Check out all the Wildlife</h2>
         <p>
-          As spawning season approaches, the fish acquire a humpback and protuberant jaw. After spawning, they die and their carcasses provide a feast for gatherings of <a href="wildlife.html">mink</a>, <a href="wildlife.html">bears</a>, and <a href="wildlife.html>bald eagles</a>.
+          As spawning season approaches, the fish acquire a humpback and protuberant jaw. After spawning, they die and their carcasses provide a feast for gatherings of <a href="wildlife.html">mink</a>, <a href="wildlife.html">bears</a>, and <a href="wildlife.html">bald eagles</a>.
         </p>
       </div><!-- End .wildlife -->
 
